tests/cases/should_fail/missing_expression_in_function_call/case.stderr
error: expected an expression
 --> $DIR/case.hash:1:11
1 |   l := f(a = );
  |             ^ here
